# fastapi-task-manager

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_db.db
backend/: alembic.ini  database.py  main.py  manager.db  models.py
backend/alembic/: env.py
backend/alembic/versions/: a55f4ae63020_create_phone_number_for_users_column.py
backend/routers/: admin.py  auth.py  post.py  task.py  users.py
backend/test/: test_example.py  test_main.py  test_task.py
