[project]
name = "fastapi-task-manager"
version = "0.1.0"
description = "Task Manager api planed to use it as a task planner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.2",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.6",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
